# otus_highload

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  main.rs
src/api/: app_state.rs  hello.rs  mod.rs  user.rs
src/handlers/: handler.rs  mod.rs  user_register.rs
src/middleware/: mod.rs  request_id.rs  span_builder.rs
src/model/: mod.rs  user_register.rs
src/repo/: mod.rs  repo_context.rs  repository.rs  user_repo.rs
src/state/: app_state.rs
src/store/: error.rs  initializer.rs  mod.rs  pg_connection.rs  repo_context.rs  user_repo.rs
