[package]
name = "otus_highload"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
tokio = "1.47.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
